// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Another 1`] = `
<button
  className="btn danger base "
  onClick={[Function]}
>
  Another
</button>
`;

exports[`Storyshots Button Danger 1`] = `
<button
  className="btn danger base "
>
  Delete
</button>
`;

exports[`Storyshots Button Default 1`] = `
<button
  className="btn default base "
/>
`;

exports[`Storyshots Button Double 1`] = `
<button
  className="btn add base "
>
  Double
</button>
`;

exports[`Storyshots Button Minus 1`] = `
<button
  className="btn add roundWidth round"
>
  -1
</button>
`;

exports[`Storyshots Button Plus 1`] = `
<button
  className="btn add roundWidth round"
>
  +1
</button>
`;

exports[`Storyshots Button Reset 1`] = `
<button
  className="btn cancel base "
>
  Reset
</button>
`;

exports[`Storyshots Button Submit 1`] = `
<button
  className="btn default base "
>
  Submit
</button>
`;

exports[`Storyshots Button Submit Large 1`] = `
<button
  className="btn default lg "
>
  Submit
</button>
`;

exports[`Storyshots Button Submit Small 1`] = `
<button
  className="btn default sm "
>
  Submit
</button>
`;

exports[`Storyshots Example/Button Large 1`] = `
<button
  className="jsx-3042671206 storybook-button storybook-button--large storybook-button--secondary"
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Primary 1`] = `
<button
  className="jsx-3042671206 storybook-button storybook-button--medium storybook-button--primary"
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Secondary 1`] = `
<button
  className="jsx-3042671206 storybook-button storybook-button--medium storybook-button--secondary"
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Small 1`] = `
<button
  className="jsx-3042671206 storybook-button storybook-button--small storybook-button--secondary"
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Header Logged In 1`] = `
<header>
  <div
    className="storybook-header"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <span
        className="welcome"
      >
        Welcome, 
        <b>
          Jane Doe
        </b>
        !
      </span>
      <button
        className="jsx-3042671206 storybook-button storybook-button--small storybook-button--secondary"
        type="button"
      >
        Log out
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Header Logged Out 1`] = `
<header>
  <div
    className="storybook-header"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <button
        className="jsx-3042671206 storybook-button storybook-button--small storybook-button--secondary"
        type="button"
      >
        Log in
      </button>
      <button
        className="jsx-3042671206 storybook-button storybook-button--small storybook-button--primary"
        type="button"
      >
        Sign up
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Page Logged In 1`] = `
<article>
  <header>
    <div
      className="storybook-header"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
        <h1>
          Acme
        </h1>
      </div>
      <div>
        <button
          className="jsx-3042671206 storybook-button storybook-button--small storybook-button--secondary"
          onClick={[Function]}
          type="button"
        >
          Log in
        </button>
        <button
          className="jsx-3042671206 storybook-button storybook-button--small storybook-button--primary"
          onClick={[Function]}
          type="button"
        >
          Sign up
        </button>
      </div>
    </div>
  </header>
  <section
    className="storybook-page"
  >
    <h2>
      Pages in Storybook
    </h2>
    <p>
      We recommend building UIs with a
       
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
       
      process starting with atomic components and ending with pages.
    </p>
    <p>
      Render pages with mock data. This makes it easy to build and review page states without needing to navigate to them in your app. Here are some handy patterns for managing page data in Storybook:
    </p>
    <ul>
      <li>
        Use a higher-level connected component. Storybook helps you compose such data from the "args" of child component stories
      </li>
      <li>
        Assemble data in the page component from your services. You can mock these services out using Storybook.
      </li>
    </ul>
    <p>
      Get a guided tutorial on component-driven development at
       
      <a
        href="https://storybook.js.org/tutorials/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Storybook tutorials
      </a>
      . Read more in the
       
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      .
    </p>
    <div
      className="tip-wrapper"
    >
      <span
        className="tip"
      >
        Tip
      </span>
       Adjust the width of the canvas with the
       
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      Viewports addon in the toolbar
    </div>
  </section>
</article>
`;

exports[`Storyshots Example/Page Logged Out 1`] = `
<article>
  <header>
    <div
      className="storybook-header"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
        <h1>
          Acme
        </h1>
      </div>
      <div>
        <button
          className="jsx-3042671206 storybook-button storybook-button--small storybook-button--secondary"
          onClick={[Function]}
          type="button"
        >
          Log in
        </button>
        <button
          className="jsx-3042671206 storybook-button storybook-button--small storybook-button--primary"
          onClick={[Function]}
          type="button"
        >
          Sign up
        </button>
      </div>
    </div>
  </header>
  <section
    className="storybook-page"
  >
    <h2>
      Pages in Storybook
    </h2>
    <p>
      We recommend building UIs with a
       
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
       
      process starting with atomic components and ending with pages.
    </p>
    <p>
      Render pages with mock data. This makes it easy to build and review page states without needing to navigate to them in your app. Here are some handy patterns for managing page data in Storybook:
    </p>
    <ul>
      <li>
        Use a higher-level connected component. Storybook helps you compose such data from the "args" of child component stories
      </li>
      <li>
        Assemble data in the page component from your services. You can mock these services out using Storybook.
      </li>
    </ul>
    <p>
      Get a guided tutorial on component-driven development at
       
      <a
        href="https://storybook.js.org/tutorials/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Storybook tutorials
      </a>
      . Read more in the
       
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      .
    </p>
    <div
      className="tip-wrapper"
    >
      <span
        className="tip"
      >
        Tip
      </span>
       Adjust the width of the canvas with the
       
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      Viewports addon in the toolbar
    </div>
  </section>
</article>
`;

exports[`Storyshots Light Another 1`] = `
<div
  className="w-10 h-10 bg-red-600 rounded-full"
/>
`;

exports[`Storyshots Light Default 1`] = `
<div
  className="w-10 h-10 bg-green-600 rounded-full"
/>
`;

exports[`Storyshots Light Green 1`] = `
<div
  className="w-10 h-10 bg-green-600 rounded-full"
/>
`;

exports[`Storyshots Light Red 1`] = `
<div
  className="w-10 h-10 bg-red-600 rounded-full"
/>
`;

exports[`Storyshots Light Traffic Light 1`] = `
<div
  className="bg-gray-300 rounded-md p-2 flex-col inline-block w-max-content"
>
  <div
    className="w-10 h-10 bg-green-600 rounded-full"
  />
  <div
    className="w-10 h-10 bg-yellow-400 rounded-full"
  />
  <div
    className="w-10 h-10 bg-red-600 rounded-full"
  />
</div>
`;

exports[`Storyshots Light Yellow 1`] = `
<div
  className="w-10 h-10 bg-yellow-400 rounded-full"
/>
`;

exports[`Storyshots Task Archived 1`] = `
<div
  aria-label="task-9"
  className="list-item border border-gray-300 p-4 bg-white TASK_ARCHIVED flex items-center justify-between"
  role="listitem"
>
  <div
    className="flex items-center"
  >
    <label
      aria-label="archiveTask-9"
      className="checkbox mr-2"
      htmlFor="checked"
    >
      <input
        checked={true}
        disabled={true}
        id="archiveTask-9"
        name="checked"
        type="checkbox"
      />
      <span
        aria-label="archiveButton-9"
        className="checkbox-custom"
        onClick={[Function]}
        role="button"
      />
    </label>
    <label
      aria-label="Write schema for account menu"
      className="title"
      htmlFor="title"
    >
      <input
        name="title"
        onChange={[Function]}
        placeholder="Input title"
        style={
          {
            "textOverflow": "ellipsis",
          }
        }
        type="text"
        value="Write schema for account menu"
      />
    </label>
    <button
      aria-label="delete"
      className="delete-button ml-auto"
      onClick={[Function]}
    >
      <svg
        className="text-gray-400"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          {
            "color": undefined,
          }
        }
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots Task Default 1`] = `
[
  <div
    aria-label="task-1"
    className="list-item border border-gray-300 p-4 bg-white TASK_INBOX flex items-center justify-between"
    role="listitem"
  >
    <div
      className="flex items-center"
    >
      <label
        aria-label="archiveTask-1"
        className="checkbox mr-2"
        htmlFor="checked"
      >
        <input
          checked={false}
          disabled={true}
          id="archiveTask-1"
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveButton-1"
          className="checkbox-custom"
          onClick={[Function]}
          role="button"
        />
      </label>
      <label
        aria-label="Build a date picker"
        className="title"
        htmlFor="title"
      >
        <input
          name="title"
          onChange={[Function]}
          placeholder="Input title"
          style={
            {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Build a date picker"
        />
      </label>
      <button
        aria-label="delete"
        className="delete-button ml-auto"
        onClick={[Function]}
      >
        <svg
          className="text-gray-400"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            {
              "color": undefined,
            }
          }
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
          />
        </svg>
      </button>
      <button
        aria-label="unpin"
        className="pin-button"
        id="pinTask-1"
        onClick={[Function]}
      >
        <span
          className="text-slate-400"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              {
                "color": undefined,
              }
            }
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  <div
    aria-label="task-2"
    className="list-item border border-gray-300 p-4 bg-white TASK_INBOX flex items-center justify-between"
    role="listitem"
  >
    <div
      className="flex items-center"
    >
      <label
        aria-label="archiveTask-2"
        className="checkbox mr-2"
        htmlFor="checked"
      >
        <input
          checked={false}
          disabled={true}
          id="archiveTask-2"
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveButton-2"
          className="checkbox-custom"
          onClick={[Function]}
          role="button"
        />
      </label>
      <label
        aria-label="QA dropdown"
        className="title"
        htmlFor="title"
      >
        <input
          name="title"
          onChange={[Function]}
          placeholder="Input title"
          style={
            {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="QA dropdown"
        />
      </label>
      <button
        aria-label="delete"
        className="delete-button ml-auto"
        onClick={[Function]}
      >
        <svg
          className="text-gray-400"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            {
              "color": undefined,
            }
          }
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
          />
        </svg>
      </button>
      <button
        aria-label="unpin"
        className="pin-button"
        id="pinTask-2"
        onClick={[Function]}
      >
        <span
          className="text-slate-400"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              {
                "color": undefined,
              }
            }
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  <div
    aria-label="task-3"
    className="list-item border border-gray-300 p-4 bg-white TASK_INBOX flex items-center justify-between"
    role="listitem"
  >
    <div
      className="flex items-center"
    >
      <label
        aria-label="archiveTask-3"
        className="checkbox mr-2"
        htmlFor="checked"
      >
        <input
          checked={false}
          disabled={true}
          id="archiveTask-3"
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveButton-3"
          className="checkbox-custom"
          onClick={[Function]}
          role="button"
        />
      </label>
      <label
        aria-label="Write a schema for account avatar component"
        className="title"
        htmlFor="title"
      >
        <input
          name="title"
          onChange={[Function]}
          placeholder="Input title"
          style={
            {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Write a schema for account avatar component"
        />
      </label>
      <button
        aria-label="delete"
        className="delete-button ml-auto"
        onClick={[Function]}
      >
        <svg
          className="text-gray-400"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            {
              "color": undefined,
            }
          }
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
          />
        </svg>
      </button>
      <button
        aria-label="unpin"
        className="pin-button"
        id="pinTask-3"
        onClick={[Function]}
      >
        <span
          className="text-slate-400"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              {
                "color": undefined,
              }
            }
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  <div
    aria-label="task-4"
    className="list-item border border-gray-300 p-4 bg-white TASK_INBOX flex items-center justify-between"
    role="listitem"
  >
    <div
      className="flex items-center"
    >
      <label
        aria-label="archiveTask-4"
        className="checkbox mr-2"
        htmlFor="checked"
      >
        <input
          checked={false}
          disabled={true}
          id="archiveTask-4"
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveButton-4"
          className="checkbox-custom"
          onClick={[Function]}
          role="button"
        />
      </label>
      <label
        aria-label="Export logo"
        className="title"
        htmlFor="title"
      >
        <input
          name="title"
          onChange={[Function]}
          placeholder="Input title"
          style={
            {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Export logo"
        />
      </label>
      <button
        aria-label="delete"
        className="delete-button ml-auto"
        onClick={[Function]}
      >
        <svg
          className="text-gray-400"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            {
              "color": undefined,
            }
          }
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
          />
        </svg>
      </button>
      <button
        aria-label="unpin"
        className="pin-button"
        id="pinTask-4"
        onClick={[Function]}
      >
        <span
          className="text-slate-400"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              {
                "color": undefined,
              }
            }
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  <div
    aria-label="task-5"
    className="list-item border border-gray-300 p-4 bg-white TASK_INBOX flex items-center justify-between"
    role="listitem"
  >
    <div
      className="flex items-center"
    >
      <label
        aria-label="archiveTask-5"
        className="checkbox mr-2"
        htmlFor="checked"
      >
        <input
          checked={false}
          disabled={true}
          id="archiveTask-5"
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveButton-5"
          className="checkbox-custom"
          onClick={[Function]}
          role="button"
        />
      </label>
      <label
        aria-label="Fix bug in input error state"
        className="title"
        htmlFor="title"
      >
        <input
          name="title"
          onChange={[Function]}
          placeholder="Input title"
          style={
            {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Fix bug in input error state"
        />
      </label>
      <button
        aria-label="delete"
        className="delete-button ml-auto"
        onClick={[Function]}
      >
        <svg
          className="text-gray-400"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            {
              "color": undefined,
            }
          }
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
          />
        </svg>
      </button>
      <button
        aria-label="unpin"
        className="pin-button"
        id="pinTask-5"
        onClick={[Function]}
      >
        <span
          className="text-slate-400"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              {
                "color": undefined,
              }
            }
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  <div
    aria-label="task-6"
    className="list-item border border-gray-300 p-4 bg-white TASK_INBOX flex items-center justify-between"
    role="listitem"
  >
    <div
      className="flex items-center"
    >
      <label
        aria-label="archiveTask-6"
        className="checkbox mr-2"
        htmlFor="checked"
      >
        <input
          checked={false}
          disabled={true}
          id="archiveTask-6"
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveButton-6"
          className="checkbox-custom"
          onClick={[Function]}
          role="button"
        />
      </label>
      <label
        aria-label="Draft monthly blog to customers"
        className="title"
        htmlFor="title"
      >
        <input
          name="title"
          onChange={[Function]}
          placeholder="Input title"
          style={
            {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Draft monthly blog to customers"
        />
      </label>
      <button
        aria-label="delete"
        className="delete-button ml-auto"
        onClick={[Function]}
      >
        <svg
          className="text-gray-400"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            {
              "color": undefined,
            }
          }
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
          />
        </svg>
      </button>
      <button
        aria-label="unpin"
        className="pin-button"
        id="pinTask-6"
        onClick={[Function]}
      >
        <span
          className="text-slate-400"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              {
                "color": undefined,
              }
            }
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`Storyshots Task Empty 1`] = `
<div
  className="flex justify-center items-center h-screen font-bold"
>
  <svg
    className="text-5xl text-green-400 mr-1"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      {
        "color": undefined,
      }
    }
    viewBox="0 0 1024 1024"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 0 0-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
    />
  </svg>
  You have no tasks!
</div>
`;

exports[`Storyshots Task Error 1`] = `
<div
  className="flex justify-center items-center h-screen font-bold text-red-500"
>
  Oh no! An error occurred while loading tasks.
</div>
`;

exports[`Storyshots Task Loading 1`] = `
<div
  className="flex justify-center items-center h-screen font-bold"
>
  <div
    className="animate-jump text-4xl"
  >
    Loading...
  </div>
</div>
`;

exports[`Storyshots Task Long Title 1`] = `
<div
  aria-label="task-10"
  className="list-item border border-gray-300 p-4 bg-white TASK_INBOX flex items-center justify-between"
  role="listitem"
>
  <div
    className="flex items-center"
  >
    <label
      aria-label="archiveTask-10"
      className="checkbox mr-2"
      htmlFor="checked"
    >
      <input
        checked={false}
        disabled={true}
        id="archiveTask-10"
        name="checked"
        type="checkbox"
      />
      <span
        aria-label="archiveButton-10"
        className="checkbox-custom"
        onClick={[Function]}
        role="button"
      />
    </label>
    <label
      aria-label="This task"s name is absurdly large. In fact, I think if I keep going I might end up with content overflow. What will happen? The star that represents a pinned task could have text overlapping. The text could cut-off abruptly when it reaches the star. I hope not!"
      className="title"
      htmlFor="title"
    >
      <input
        name="title"
        onChange={[Function]}
        placeholder="Input title"
        style={
          {
            "textOverflow": "ellipsis",
          }
        }
        type="text"
        value="This task"s name is absurdly large. In fact, I think if I keep going I might end up with content overflow. What will happen? The star that represents a pinned task could have text overlapping. The text could cut-off abruptly when it reaches the star. I hope not!"
      />
    </label>
    <button
      aria-label="delete"
      className="delete-button ml-auto"
      onClick={[Function]}
    >
      <svg
        className="text-gray-400"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          {
            "color": undefined,
          }
        }
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
        />
      </svg>
    </button>
    <button
      aria-label="unpin"
      className="pin-button"
      id="pinTask-10"
      onClick={[Function]}
    >
      <span
        className="text-slate-400"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            {
              "color": undefined,
            }
          }
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Task Pinned 1`] = `
<div
  aria-label="task-2"
  className="list-item border border-gray-300 p-4 bg-white TASK_PINNED flex items-center justify-between"
  role="listitem"
>
  <div
    className="flex items-center"
  >
    <label
      aria-label="archiveTask-2"
      className="checkbox mr-2"
      htmlFor="checked"
    >
      <input
        checked={false}
        disabled={true}
        id="archiveTask-2"
        name="checked"
        type="checkbox"
      />
      <span
        aria-label="archiveButton-2"
        className="checkbox-custom"
        onClick={[Function]}
        role="button"
      />
    </label>
    <label
      aria-label="QA dropdown"
      className="title"
      htmlFor="title"
    >
      <input
        name="title"
        onChange={[Function]}
        placeholder="Input title"
        style={
          {
            "textOverflow": "ellipsis",
          }
        }
        type="text"
        value="QA dropdown"
      />
    </label>
    <button
      aria-label="delete"
      className="delete-button ml-auto"
      onClick={[Function]}
    >
      <svg
        className="text-gray-400"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          {
            "color": undefined,
          }
        }
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
        />
      </svg>
    </button>
    <button
      aria-label="pin"
      className="pin-button"
      id="pinTask-2"
      onClick={[Function]}
    >
      <span
        className="text-orange-300"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            {
              "color": undefined,
            }
          }
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Task State 1`] = `null`;

exports[`Storyshots Task With Pinned Tasks 1`] = `
<div
  aria-label="task-6"
  className="list-item border border-gray-300 p-4 bg-white TASK_PINNED flex items-center justify-between"
  role="listitem"
>
  <div
    className="flex items-center"
  >
    <label
      aria-label="archiveTask-6"
      className="checkbox mr-2"
      htmlFor="checked"
    >
      <input
        checked={false}
        disabled={true}
        id="archiveTask-6"
        name="checked"
        type="checkbox"
      />
      <span
        aria-label="archiveButton-6"
        className="checkbox-custom"
        onClick={[Function]}
        role="button"
      />
    </label>
    <label
      aria-label="Draft monthly blog to customers"
      className="title"
      htmlFor="title"
    >
      <input
        name="title"
        onChange={[Function]}
        placeholder="Input title"
        style={
          {
            "textOverflow": "ellipsis",
          }
        }
        type="text"
        value="Draft monthly blog to customers"
      />
    </label>
    <button
      aria-label="delete"
      className="delete-button ml-auto"
      onClick={[Function]}
    >
      <svg
        className="text-gray-400"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          {
            "color": undefined,
          }
        }
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
        />
      </svg>
    </button>
    <button
      aria-label="pin"
      className="pin-button"
      id="pinTask-6"
      onClick={[Function]}
    >
      <span
        className="text-orange-300"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            {
              "color": undefined,
            }
          }
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots UserItem Default 1`] = `
<li>
  100
  :
  John Doe
</li>
`;

exports[`Storyshots UserItem Fetch Data 1`] = `
<li>
  :
</li>
`;
